kubernetes/projects/eks-cluster/2-tier-application-with-secretsmanager/kubernetes/php-app/php-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: two-tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: lbistech/eks-two-tier-app:latest
        ports:
        - containerPort: 80
